@@ -4,6 +4,8 @@ NEWS for hydroPSO
         o 'lhoat'         : -) when 'normalise=TRUE' the 'ParameterSets' output is now given in the real range of each parameter, and not in the 
                                normalised range [0, 1] as up to version 0.3.2. The 'lhoat-gof.txt' output file has always been written in the real 
                                range of each parameter when 'normalise=TRUE'. Thanks to Romain Lardy !
+                            -) fixed error: 'Error in Thetas * (UPPER.ini - LOWER.ini) : non-conformable arrays', which was triggered when 
+                               'normalise=TRUE' & 'model.FUN="hydromod"'.
         o 'wquantile'     : -) fixed error: 'Error en setTxtProgressBar(pbar, i) : objeto 'pbar' no encontrado', which was triggered when 'verbose=FALSE'.
                                Thanks to Antonio Piccolboni !
 
